--- a/.codecov.yml
+++ b/.codecov.yml
@@ -19,8 +19,8 @@ coverage:
 # --------------
 # which folders/files to ignore
 ignore:
-  - sssdevops/tests/.*
-  - sssdevops/_version.py
+  - sssdevlops/tests/.*
+  - sssdevlops/_version.py
   - setup.py
   - versioneer.py
 
